[gd_scene load_steps=2 format=3 uid="uid://cvet5bfb8lt4e"]

[ext_resource type="Script" path="res://scenes/projectiles/area_projectile.gd" id="1_l805c"]

[node name="AreaProjectile" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_l805c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Image" type="Sprite2D" parent="."]

[node name="TTL" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TTL" to="." method="_on_ttl_timeout"]
